@@ -86,6 +86,7 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
     private GUIConfiguration windowConfiguration;
     private GUIMain windowMain;
     private GUICheckInCheckOut windowCheckInCheckOut;
+    private Map<Buchung, BookingChangeComponent> editTabs = new HashMap<>();
     // Other properties
     private EntityManager entityManager;
     private Datenbasis<ICSVPersistable> database;
@@ -263,60 +264,361 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
     }
 
     public void handleWindowBookingBookingSelected(final String elementID) {
+        final var optionalBooking = this.entityManager.findOne(Buchung.class, elementID);
+        if (optionalBooking.isEmpty()) {
+            return; // should not happen
+        }
+
+        final var booking = optionalBooking.get();
+        if (this.editTabs.containsKey(booking)) {
+            // Tab already exists switch to it
+            this.fireUpdateEvent(new UpdateEvent(
+                    this,
+                    GUIBuchung.Commands.SWITCH_TAB,
+                    this.editTabs.get(booking)
+            ));
+            return;
+        }
+
+        final var editBookingGUI = new BookingChangeComponent(this.getConfig());
+        this.editTabs.put(booking, editBookingGUI);
+        this.addObserver(editBookingGUI);
+        editBookingGUI.addObserver(new GUIBuchungObserver());
+
+
+        // load the booking data in the edit gui
+        final var allGuests = new ArrayList<>(booking.getZugehoerigeGaeste());
+        allGuests.add(booking.getVerantwortlicherGast());
+        final var updateEvents = new UpdateEvent[] {
+                new UpdateEvent(this, BookingChangeComponent.Commands.SET_MODE, BookingChangeComponent.Mode.EDIT(booking)),
+                new UpdateEvent(this, Commands.UPDATE_PITCHES, this.entityManager.find(Stellplatz.class)),
+                new UpdateEvent(this, Commands.UPDATE_CHIPCARDS, this.entityManager.find(Chipkarte.class)),
+                new UpdateEvent(this, BookingChangeComponent.Commands.SET_START_DATE, booking.getAnreise()),
+                new UpdateEvent(this, BookingChangeComponent.Commands.SET_END_DATE, booking.getAbreise()),
+                new UpdateEvent(this, BookingChangeComponent.Commands.SET_PITCH, booking.getGebuchterStellplatz()),
+                new UpdateEvent(this, BookingChangeComponent.Commands.SET_ASSOCIATED_GUESTS, new BookingChangeComponent.GuestListPayload(
+                        allGuests,
+                        Optional.of(booking.getVerantwortlicherGast())
+                )),
+                new UpdateEvent(this, BookingChangeComponent.Commands.SET_BOOKED_SERVICES, new ArrayList<>(booking.getGebuchteLeistungen())),
+                new UpdateEvent(this, BookingChangeComponent.Commands.SET_RENTED_EQUIPMENT, new ArrayList<>(booking.getMitgebrachteAusruestung())),
+                new UpdateEvent(this, BookingChangeComponent.Commands.SET_SELECTED_CHIPCARDS, new ArrayList<>(booking.getAusgehaendigteChipkarten()))
+        };
+
+        for (final var updateEvent : updateEvents) {
+            editBookingGUI.processUpdateEvent(updateEvent);
+        }
+
         this.fireUpdateEvent(new UpdateEvent(
                         this,
                         GUIBuchung.Commands.OPEN_TAB,
                         new GUIBuchung.TabPayload(
-                                // TODO: real data this.entityManager.findOne(Buchung.class, elementID),
-                                // TODO: close tab panes after done editing
                                 "Buchung " + elementID + " bearbeiten",
-                                this.windowStaff,
+                                editBookingGUI,
                                 "Die Buchung mit der Buchungsnummer " + elementID + " bearbeiten"
                         )
                 )
         );
     }
 
-    public void handleWindowBookingCreateBookingCancel() {
+    public void handleWindowBookingChangeCancel(final GUIComponent source, final BookingChangeComponent.Mode mode) {
         final var decision = JOptionPane.showConfirmDialog(
                 null,
-                "Wollen Sie die Erstellung der Buchung wirklich abbrechen?",
-                "Buchung abbrechen",
+                mode instanceof BookingChangeComponent.Mode.CREATE
+                        ? "Wollen Sie die Erstellung der Buchung wirklich abbrechen?"
+                        : "Wollen Sie die Bearbeitung der Buchung wirklich abbrechen?",
+                mode instanceof BookingChangeComponent.Mode.CREATE
+                        ? "Buchungserstellung abbrechen"
+                        : "Buchungsbearbeitung abbrechen",
                 JOptionPane.YES_NO_OPTION
         );
 
         if (decision == JOptionPane.YES_OPTION) {
-            this.fireUpdateEvent(new UpdateEvent(this, BookingCreateComponent.Commands.RESET_INPUT));
+            this.fireUpdateEvent(new UpdateEvent(
+                    this,
+                    GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                    new GUIBuchung.SendEventToTabPayload(
+                            source,
+                            new UpdateEvent(
+                                    GUIController.this,
+                                    BookingChangeComponent.Commands.RESET_INPUT
+                            )
+
+                    )
+            ));
+
+            if (mode instanceof BookingChangeComponent.Mode.EDIT edit) {
+                final var booking = (Buchung) edit.data();
+                final var component = this.editTabs.get(booking);
+                this.editTabs.remove(booking);
+                this.fireUpdateEvent(new UpdateEvent(this, GUIBuchung.Commands.CLOSE_TAB, component));
+            }
             this.fireUpdateEvent(new UpdateEvent(this, GUIBuchung.Commands.SWITCH_TAB, GUIBuchung.Tabs.BOOKING_LIST));
         }
     }
 
-    public void handleWindowBookingCreateBookingCreate(final BookingCreateComponent.BookingCreatePayload payload) {
+    public void handleWindowBookingChangeDelete(final Buchung booking) {
+        final var decision = JOptionPane.showConfirmDialog(
+                null,
+                "Wollen Sie die Buchung wirklich löschen?",
+                "Buchung löschen",
+                JOptionPane.YES_NO_OPTION
+        );
+
+        if (decision == JOptionPane.YES_OPTION) {
+            final var component = this.editTabs.get(booking);
+            this.editTabs.remove(booking);
+            this.fireUpdateEvent(new UpdateEvent(this, GUIBuchung.Commands.CLOSE_TAB, component));
+            this.fireUpdateEvent(new UpdateEvent(this, GUIBuchung.Commands.SWITCH_TAB, GUIBuchung.Tabs.BOOKING_LIST));
+
+            try {
+                this.database.transaction(() -> {
+                    for (final var bookedService : booking.getGebuchteLeistungen()) {
+                        this.database.delete(GebuchteLeistung.class, bookedService);
+                    }
+                    for (final var equipment : booking.getMitgebrachteAusruestung()) {
+                        this.database.delete(Ausruestung.class, equipment);
+                    }
+                    this.database.delete(Buchung.class, booking);
+                });
+            } catch (IOException e) {
+                AppLogger.getInstance().error("Failed to delete booking from the database.");
+                AppLogger.getInstance().error(e);
+                JOptionPane.showMessageDialog(null, "Die Buchung konnte nicht gelöscht werden.", "Fehler", JOptionPane.ERROR_MESSAGE);
+                return;
+            }
+
+            for (final var bookedService : booking.getGebuchteLeistungen()) {
+                this.entityManager.remove(bookedService);
+            }
+            for (final var equipment : booking.getMitgebrachteAusruestung()) {
+                this.entityManager.remove(equipment);
+            }
+            this.entityManager.remove(booking);
+        }
+    }
+
+    public void handleWindowBookingChangeDeleteChipCard(final GUIComponent source,
+                                                        final List<Chipkarte> selectedChipCards,
+                                                        final Chipkarte deletedChipCard) {
+        final var newSelectedChipCards = new ArrayList<>(selectedChipCards);
+        newSelectedChipCards.remove(deletedChipCard);
+        if (newSelectedChipCards.size() != selectedChipCards.size()) {
+            this.fireUpdateEvent(new UpdateEvent(
+                    this,
+                    GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                    new GUIBuchung.SendEventToTabPayload(
+                            source,
+                            new UpdateEvent(
+                                    GUIController.this,
+                                    BookingChangeComponent.Commands.SET_SELECTED_CHIPCARDS,
+                                    newSelectedChipCards
+                            )
+
+                    )
+            ));
+        }
+    }
+
+    public void handleWindowBookingChangeDeleteEquipment(final GUIComponent source,
+                                                         final List<Ausruestung> rentedEquipment,
+                                                         final Ausruestung equipmentToDelete) {
+        final var newRentedEquipment = new ArrayList<>(rentedEquipment);
+        newRentedEquipment.remove(equipmentToDelete);
+        if (newRentedEquipment.size() != rentedEquipment.size()) {
+            this.fireUpdateEvent(new UpdateEvent(
+                    this,
+                    GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                    new GUIBuchung.SendEventToTabPayload(
+                            source,
+                            new UpdateEvent(
+                                    GUIController.this,
+                                    BookingChangeComponent.Commands.SET_RENTED_EQUIPMENT,
+                                    newRentedEquipment
+                            )
+
+                    )
+            ));
+        }
+    }
+
+    public void handleWindowBookingChangeDeleteService(final GUIComponent source,
+                                                       final List<GebuchteLeistung> bookedServices,
+                                                       final GebuchteLeistung serviceToDelete) {
+        final var newBookedServices = new ArrayList<>(bookedServices);
+        newBookedServices.remove(serviceToDelete);
+        if (newBookedServices.size() != bookedServices.size()) {
+            this.fireUpdateEvent(new UpdateEvent(
+                    this,
+                    GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                    new GUIBuchung.SendEventToTabPayload(
+                            source,
+                            new UpdateEvent(
+                                    GUIController.this,
+                                    BookingChangeComponent.Commands.SET_BOOKED_SERVICES,
+                                    newBookedServices
+                            )
+
+                    )
+            ));
+        }
+    }
+
+    public void handleWindowBookingChangeEditEquipment(final GUIComponent source,
+                                                       final List<Ausruestung> rentedEquipment,
+                                                       final Ausruestung equipmentToEdit,
+                                                       final int countDelta) {
+        final var newRentEquipment = new ArrayList<>(rentedEquipment);
+        final var index = newRentEquipment.indexOf(equipmentToEdit);
+        if (index == -1) {
+            return;
+        }
+
+        final var newCount = equipmentToEdit.getAnzahl() + countDelta;
+        if (newCount <= 0) {
+            newRentEquipment.remove(equipmentToEdit);
+        } else {
+            rentedEquipment.get(index).setAnzahl(newCount);
+        }
+        this.fireUpdateEvent(new UpdateEvent(
+                this,
+                GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                new GUIBuchung.SendEventToTabPayload(
+                        source,
+                        new UpdateEvent(
+                                GUIController.this,
+                                BookingChangeComponent.Commands.SET_RENTED_EQUIPMENT,
+                                rentedEquipment
+                        )
+
+                )
+        ));
+    }
+
+    @SuppressWarnings("unchecked")
+    public void handleWindowBookingChangeGuestDeleted(final GUIComponent source,
+                                                      final List<Gast> selectedGuests,
+                                                      final Gast deletedGuest,
+                                                      @SuppressWarnings("OptionalUsedAsFieldOrParameterType") final Optional<Gast> responsibleGuest) {
+        final var newSelectedGuests = new ArrayList<>(selectedGuests);
+        newSelectedGuests.remove(deletedGuest);
+
+        if (selectedGuests.size() == newSelectedGuests.size()) {
+            return;
+        }
+
+        final var newResponsibleGuest = responsibleGuest.isPresent() && responsibleGuest.get().equals(deletedGuest)
+                ? Optional.<Gast>empty()
+                : responsibleGuest;
+
+        this.fireUpdateEvent(new UpdateEvent(
+                this,
+                GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                new GUIBuchung.SendEventToTabPayload(
+                        source,
+                        new UpdateEvent(
+                                GUIController.this,
+                                BookingChangeComponent.Commands.SET_ASSOCIATED_GUESTS,
+                                new BookingChangeComponent.GuestListPayload(newSelectedGuests, newResponsibleGuest)
+                        )
+
+                )
+        ));
+    }
+
+    public void handleWindowBookingChangeResponsibleGuestSelected(final GUIComponent source,
+                                                                  final List<Gast> selectedGuests,
+                                                                  final Gast responsibleGuest) {
+        this.fireUpdateEvent(new UpdateEvent(
+                this,
+                GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                new GUIBuchung.SendEventToTabPayload(
+                        source,
+                        new UpdateEvent(
+                                this,
+                                BookingChangeComponent.Commands.SET_ASSOCIATED_GUESTS,
+                                new BookingChangeComponent.GuestListPayload(
+                                        selectedGuests,
+                                        Optional.of(responsibleGuest)
+                                )
+                        )
+
+                )
+        ));
+    }
+
+    public void handleWindowBookingChangeSave(final GUIComponent source, final BookingChangeComponent.SavePayload payload) {
         var hasError = false;
-        this.fireUpdateEvent(new UpdateEvent(this, BookingCreateComponent.Commands.ERRORS_RESET));
+        this.fireUpdateEvent(new UpdateEvent(
+                this,
+                GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                new GUIBuchung.SendEventToTabPayload(
+                        source,
+                        new UpdateEvent(this, BookingChangeComponent.Commands.ERRORS_RESET)
+                )
+        ));
 
         if (payload.arrivalDate().isEmpty()) {
-            this.fireUpdateEvent(new UpdateEvent(this,
-                    BookingCreateComponent.Commands.ERRORS_SHOW_START_DATE,
-                    "Bitte geben Sie ein Anreisedatum an."));
+            this.fireUpdateEvent(new UpdateEvent(
+                    this,
+                    GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                    new GUIBuchung.SendEventToTabPayload(
+                            source,
+                            new UpdateEvent(
+                                    this,
+                                    BookingChangeComponent.Commands.ERRORS_SHOW_START_DATE,
+                                    "Bitte geben Sie ein Anreisedatum an."
+                            )
+                    )
+            ));
             hasError = true;
-        } else if (payload.arrivalDate().get().isBefore(LocalDateTime.now())) {
-            this.fireUpdateEvent(new UpdateEvent(this,
-                    BookingCreateComponent.Commands.ERRORS_SHOW_START_DATE,
-                    "Das Anreisedatum muss in der Zukunft liegen."));
+        } else if (payload.arrivalDate().get().isBefore(LocalDateTime.now()) && payload.mode() instanceof BookingChangeComponent.Mode.CREATE) {
+            // new bookings have to be in the future
+            this.fireUpdateEvent(new UpdateEvent(
+                    this,
+                    GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                    new GUIBuchung.SendEventToTabPayload(
+                            source,
+                            new UpdateEvent(
+                                    this,
+                                    BookingChangeComponent.Commands.ERRORS_SHOW_START_DATE,
+                                    "Das Anreisedatum muss in der Zukunft liegen."
+                            )
+                    )
+            ));
             hasError = true;
         }
 
         if (payload.departureDate().isEmpty()) {
-            this.fireUpdateEvent(new UpdateEvent(this, BookingCreateComponent.Commands.ERRORS_SHOW_END_DATE, "Bitte geben Sie ein Abreisedatum an."));
+            this.fireUpdateEvent(new UpdateEvent(
+                    this,
+                    GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                    new GUIBuchung.SendEventToTabPayload(
+                            source,
+                            new UpdateEvent(
+                                    this,
+                                    BookingChangeComponent.Commands.ERRORS_SHOW_END_DATE,
+                                    "Bitte geben Sie ein Abreisedatum an."
+                            )
+                    )
+            ));
             hasError = true;
         }
 
 
         if (payload.responsibleGuest().isEmpty()) {
-            this.fireUpdateEvent(new UpdateEvent(this,
-                    BookingCreateComponent.Commands.ERRORS_SHOW_GUEST,
-                    "Bitte wählen Sie einen verantwortlichen Gast aus."));
+            this.fireUpdateEvent(new UpdateEvent(
+                    this,
+                    GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                    new GUIBuchung.SendEventToTabPayload(
+                            source,
+                            new UpdateEvent(
+                                    this,
+                                    BookingChangeComponent.Commands.ERRORS_SHOW_GUEST,
+                                    "Bitte wählen Sie einen verantwortlichen Gast aus."
+                            )
+                    )
+            ));
             hasError = true;
         }
 
@@ -327,9 +629,18 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
             final var departureDate = payload.departureDate().get();
 
             if (arrivalDate.isAfter(departureDate)) {
-                this.fireUpdateEvent(new UpdateEvent(this,
-                        BookingCreateComponent.Commands.ERRORS_SHOW_END_DATE,
-                        "Bitte geben Sie ein Abreisedatum an."));
+                this.fireUpdateEvent(new UpdateEvent(
+                        this,
+                        GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                        new GUIBuchung.SendEventToTabPayload(
+                                source,
+                                new UpdateEvent(
+                                        this,
+                                        BookingChangeComponent.Commands.ERRORS_SHOW_END_DATE,
+                                        "Bitte geben Sie ein Abreisedatum an."
+                                )
+                        )
+                ));
                 hasError = true;
             }
 
@@ -337,6 +648,13 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
                     .find(Buchung.class)
                     .stream()
                     .filter(b -> b.getGebuchterStellplatz().equals(pitch))
+                    .filter(b -> {
+                        if (payload.mode() instanceof BookingChangeComponent.Mode.EDIT edit) {
+                            // don't count the booking we're editing
+                            return !b.equals(edit.data());
+                        }
+                        return true;
+                    })
                     .filter(b -> {
                         final var otherArrivalDate = b.getAnreise();
                         final var otherDepartureDate = b.getAbreise();
@@ -346,9 +664,18 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
                     .count();
 
             if (conflictingBookingsCount > 0) {
-                this.fireUpdateEvent(new UpdateEvent(this,
-                        BookingCreateComponent.Commands.ERRORS_SHOW_PITCH,
-                        "Der Stellplatz ist in diesem Zeitraum bereits belegt. Bitte wählen Sie einen anderen Stellplatz aus."));
+                this.fireUpdateEvent(new UpdateEvent(
+                        this,
+                        GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                        new GUIBuchung.SendEventToTabPayload(
+                                source,
+                                new UpdateEvent(
+                                        this,
+                                        BookingChangeComponent.Commands.ERRORS_SHOW_PITCH,
+                                        "Der Stellplatz ist in diesem Zeitraum bereits belegt. Bitte wählen Sie einen anderen Stellplatz aus."
+                                )
+                        )
+                ));
                 hasError = true;
             }
 
@@ -372,7 +699,14 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
             ).collect(Collectors.joining("\n"));
 
             if (!serviceErrors.isEmpty()) {
-                this.fireUpdateEvent(new UpdateEvent(this, BookingCreateComponent.Commands.ERRORS_SHOW_SERVICES, serviceErrors));
+                this.fireUpdateEvent(new UpdateEvent(
+                        this,
+                        GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                        new GUIBuchung.SendEventToTabPayload(
+                                source,
+                                new UpdateEvent(this, BookingChangeComponent.Commands.ERRORS_SHOW_SERVICES, serviceErrors)
+                        )
+                ));
                 hasError = true;
             }
         }
@@ -385,7 +719,19 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
         final var departureDate = payload.departureDate().get();
         final var responsibleGuest = (Gast) payload.responsibleGuest().get();
 
-        final var booking = new Buchung(this.entityManager.generateNextPrimaryKey(Buchung.class), arrivalDate, departureDate);
+        final var booking = payload.mode() instanceof BookingChangeComponent.Mode.EDIT edit
+                ? (Buchung) edit.data()
+                : new Buchung(this.entityManager.generateNextPrimaryKey(Buchung.class), arrivalDate, departureDate);
+
+        if (payload.mode() instanceof BookingChangeComponent.Mode.EDIT edit) {
+            booking.setAnreise(arrivalDate);
+            booking.setAbreise(departureDate);
+            booking.removeAllZugehoerigerGaeste();
+            booking.removeAllGebuchteLeistungen();
+            booking.removeAllMitgebrachteAusruestungen();
+            booking.removeAllAusgehaendigteChipkarten();
+        }
+
         for (final var associatedGuest : payload.associatedGuests()) {
             booking.addZugehoerigerGast((Gast) associatedGuest);
         }
@@ -413,7 +759,7 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
                 for (final var equipment : booking.getMitgebrachteAusruestung()) {
                     this.database.upsert(Ausruestung.class, equipment);
                 }
-                this.database.create(Buchung.class, booking);
+                this.database.upsert(Buchung.class, booking);
             });
         } catch (IOException e) {
             AppLogger.getInstance().error("Failed to create booking in database.");
@@ -433,112 +779,39 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
         }
         this.entityManager.persist(booking);
         this.doEntityUpdate();
-        this.fireUpdateEvent(new UpdateEvent(this, BookingCreateComponent.Commands.RESET_INPUT));
+
+        if (payload.mode() instanceof BookingChangeComponent.Mode.EDIT edit) {
+            final var beforeBooking = (Buchung) edit.data();
+            final var component = this.editTabs.get(beforeBooking);
+            this.editTabs.remove(beforeBooking);
+
+            this.fireUpdateEvent(new UpdateEvent(this, GUIBuchung.Commands.CLOSE_TAB, component));
+        }
+
+        this.fireUpdateEvent(new UpdateEvent(
+                this,
+                GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                new GUIBuchung.SendEventToTabPayload(
+                        source,
+                        new UpdateEvent(this, BookingChangeComponent.Commands.RESET_INPUT)
+                )
+        ));
         this.fireUpdateEvent(new UpdateEvent(this, GUIBuchung.Commands.SWITCH_TAB, GUIBuchung.Tabs.BOOKING_LIST));
     }
 
-    public void handleWindowBookingCreateDeleteChipCard(final List<Chipkarte> selectedChipCards, final Chipkarte deletedChipCard) {
-        final var newSelectedChipCards = new ArrayList<>(selectedChipCards);
-        newSelectedChipCards.remove(deletedChipCard);
-        if (newSelectedChipCards.size() != selectedChipCards.size()) {
-            this.fireUpdateEvent(new UpdateEvent(
-                    this,
-                    BookingCreateComponent.Commands.SET_SELECTED_CHIPCARDS,
-                    newSelectedChipCards
-            ));
-        }
-    }
-
-    public void handleWindowBookingCreateDeleteEquipment(final List<Ausruestung> rentedEquipment, final Ausruestung equipmentToDelete) {
-        final var newRentedEquipment = new ArrayList<>(rentedEquipment);
-        newRentedEquipment.remove(equipmentToDelete);
-        if (newRentedEquipment.size() != rentedEquipment.size()) {
-            this.fireUpdateEvent(new UpdateEvent(
-                    this,
-                    BookingCreateComponent.Commands.SET_RENTED_EQUIPMENT,
-                    newRentedEquipment
-            ));
-        }
-    }
-
-    public void handleWindowBookingCreateDeleteService(final List<GebuchteLeistung> bookedServices, final GebuchteLeistung serviceToDelete) {
-        final var newBookedServices = new ArrayList<>(bookedServices);
-        newBookedServices.remove(serviceToDelete);
-        if (newBookedServices.size() != bookedServices.size()) {
-            this.fireUpdateEvent(new UpdateEvent(
-                    this,
-                    BookingCreateComponent.Commands.SET_BOOKED_SERVICES,
-                    newBookedServices
-            ));
-        }
-    }
-
-    public void handleWindowBookingCreateEditEquipment(final List<Ausruestung> rentedEquipment,
-                                                       final Ausruestung equipmentToEdit,
-                                                       final int countDelta) {
-        final var newRentEquipment = new ArrayList<>(rentedEquipment);
-        final var index = newRentEquipment.indexOf(equipmentToEdit);
-        if (index == -1) {
-            return;
-        }
-
-        final var newCount = equipmentToEdit.getAnzahl() + countDelta;
-        if (newCount <= 0) {
-            newRentEquipment.remove(equipmentToEdit);
-            this.fireUpdateEvent(new UpdateEvent(
-                    this,
-                    BookingCreateComponent.Commands.SET_RENTED_EQUIPMENT,
-                    rentedEquipment
-            ));
-        } else {
-            rentedEquipment.get(index).setAnzahl(newCount);
-            this.fireUpdateEvent(new UpdateEvent(
-                    this,
-                    BookingCreateComponent.Commands.SET_RENTED_EQUIPMENT,
-                    rentedEquipment
-            ));
-        }
-
-    }
-
-    @SuppressWarnings("unchecked")
-    public void handleWindowBookingCreateGuestDeleted(final List<Gast> selectedGuests,
-                                                      final Gast deletedGuest,
-                                                      @SuppressWarnings("OptionalUsedAsFieldOrParameterType") final Optional<Gast> responsibleGuest) {
-        final var newSelectedGuests = new ArrayList<>(selectedGuests);
-        newSelectedGuests.remove(deletedGuest);
-
-        if (selectedGuests.size() == newSelectedGuests.size()) {
-            return;
-        }
-
-        final var newResponsibleGuest = responsibleGuest.isPresent() && responsibleGuest.get().equals(deletedGuest)
-                ? Optional.<Gast>empty()
-                : responsibleGuest;
-
+    public void handleWindowBookingChangeSelectChipCard(final GUIComponent source, final Chipkarte newlySelectedChipkarte) {
         this.fireUpdateEvent(new UpdateEvent(
                 this,
-                BookingCreateComponent.Commands.SET_ASSOCIATED_GUESTS,
-                new BookingCreateComponent.GuestListPayload(newSelectedGuests, newResponsibleGuest)
-        ));
-    }
+                GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                new GUIBuchung.SendEventToTabPayload(
+                        source,
+                        new UpdateEvent(
+                                GUIController.this,
+                                BookingChangeComponent.Commands.ADD_SELECTED_CHIPCARD,
+                                newlySelectedChipkarte
+                        )
 
-    public void handleWindowBookingCreateResponsibleGuestSelected(final List<Gast> selectedGuests, final Gast responsibleGuest) {
-        this.fireUpdateEvent(new UpdateEvent(
-                this,
-                BookingCreateComponent.Commands.SET_ASSOCIATED_GUESTS,
-                new BookingCreateComponent.GuestListPayload(
-                        selectedGuests,
-                        Optional.of(responsibleGuest)
                 )
-        ));
-    }
-
-    public void handleWindowBookingCreateSelectChipCard(final Chipkarte newlySelectedChipkarte) {
-        this.fireUpdateEvent(new UpdateEvent(
-                this,
-                BookingCreateComponent.Commands.ADD_SELECTED_CHIPCARD,
-                newlySelectedChipkarte
         ));
     }
 
@@ -613,7 +886,8 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
     public void openDialogDatePicker(
             final GUIComponent parentComponent,
             final EventCommand eventToEmit,
-            final Optional<LocalDate> optionalDate
+            final Optional<LocalDate> optionalDate,
+            final boolean wrapEventInTabDelegation
     ) {
         // create dialog
         final var calendarComponent = new CalendarComponent(this.getConfig(), optionalDate);
@@ -629,11 +903,28 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
             }
             final var dialog = SwingUtilities.getWindowAncestor(calendarComponent);
             dialog.dispatchEvent(new WindowEvent(dialog, WindowEvent.WINDOW_CLOSING));
-            this.fireUpdateEvent(new UpdateEvent(
-                    this,
-                    eventToEmit,
-                    guiEvent.getData()
-            ));
+            // TODO: can we do this in a better way?
+            if (wrapEventInTabDelegation) {
+                this.fireUpdateEvent(new UpdateEvent(
+                        this,
+                        GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                        new GUIBuchung.SendEventToTabPayload(
+                                parentComponent,
+                                new UpdateEvent(
+                                        GUIController.this,
+                                        eventToEmit,
+                                        guiEvent.getData()
+                                )
+
+                        )
+                ));
+            } else {
+                this.fireUpdateEvent(new UpdateEvent(
+                        this,
+                        eventToEmit,
+                        guiEvent.getData()
+                ));
+            }
         });
 
         // open Dialog
@@ -678,13 +969,15 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
                 this.openDialogDatePicker(
                         parentComponent,
                         ServiceSelectorComponent.Commands.SET_START_DATE,
-                        (Optional<LocalDate>) guiEvent.getData()
+                        (Optional<LocalDate>) guiEvent.getData(),
+                        true
                 );
             } else if (guiEvent.getCmd() == ServiceSelectorComponent.Commands.BUTTON_PRESSED_SELECT_END_DATE) {
                 this.openDialogDatePicker(
                         parentComponent,
                         ServiceSelectorComponent.Commands.SET_END_DATE,
-                        (Optional<LocalDate>) guiEvent.getData()
+                        (Optional<LocalDate>) guiEvent.getData(),
+                        true
                 );
             } else if (guiEvent.getCmd() == ServiceSelectorComponent.Commands.BUTTON_PRESSED_CANCEL) {
                 final var dialog = SwingUtilities.getWindowAncestor(serviceSelectorComponent);
@@ -746,10 +1039,17 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
                 dialog.dispose();
                 this.fireUpdateEvent(new UpdateEvent(
                         this,
-                        eventToEmit,
-                        services
-                ));
+                        GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                        new GUIBuchung.SendEventToTabPayload(
+                                parentComponent,
+                                new UpdateEvent(
+                                        GUIController.this,
+                                        eventToEmit,
+                                        services
+                                )
 
+                        )
+                ));
             }
         });
 
@@ -847,8 +1147,16 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
                 dialog.dispose();
                 this.fireUpdateEvent(new UpdateEvent(
                         this,
-                        eventToEmit,
-                        equipment
+                        GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                        new GUIBuchung.SendEventToTabPayload(
+                                parentComponent,
+                                new UpdateEvent(
+                                        GUIController.this,
+                                        eventToEmit,
+                                        equipment
+                                )
+
+                        )
                 ));
             }
         });
@@ -935,8 +1243,16 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
 
                 this.fireUpdateEvent(new UpdateEvent(
                         GUIController.this,
-                        eventToEmit,
-                        guest
+                        GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                        new GUIBuchung.SendEventToTabPayload(
+                                parentComponent,
+                                new UpdateEvent(
+                                        GUIController.this,
+                                        eventToEmit,
+                                        guest
+                                )
+
+                        )
                 ));
             }
         });
@@ -972,14 +1288,19 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
         final var pitches = this.entityManager
                 .find(Stellplatz.class)
                 .stream()
+                .sorted()
                 .map(p -> new PitchSelectorComponent.Pitch(
                         p.getLage().getLatitude(),
                         p.getLage().getLongitude(),
                         p.getFotos().stream().findAny().map(Foto::getImage).map(ImageElement::getBaseImage),
                         p
                 ))
-                .toList();
-        this.fireUpdateEvent(new UpdateEvent(this, PitchSelectorComponent.Commands.UPDATE_PITCHES, pitches));
+                .collect(Collectors.toList());
+        this.fireUpdateEvent(new UpdateEvent(
+                this,
+                PitchSelectorComponent.Commands.UPDATE_PITCHES,
+                pitches
+        ));
 
         // set window properties
         final var parentWindow = this.getNearestWindow(parentComponent);
@@ -998,8 +1319,16 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
                 entityManager.persist(pitch);
                 this.fireUpdateEvent(new UpdateEvent(
                         this,
-                        eventToEmit,
-                        pitch
+                        GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                        new GUIBuchung.SendEventToTabPayload(
+                                parentComponent,
+                                new UpdateEvent(
+                                        GUIController.this,
+                                        eventToEmit,
+                                        pitch
+                                )
+
+                        )
                 ));
             }
         });
@@ -1052,13 +1381,15 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
                 this.openDialogDatePicker(
                         parentComponent,
                         ServiceSelectorComponent.Commands.SET_START_DATE,
-                        (Optional<LocalDate>) guiEvent.getData()
+                        (Optional<LocalDate>) guiEvent.getData(),
+                        false
                 );
             } else if (guiEvent.getCmd() == ServiceSelectorComponent.Commands.BUTTON_PRESSED_SELECT_END_DATE) {
                 this.openDialogDatePicker(
                         parentComponent,
                         ServiceSelectorComponent.Commands.SET_END_DATE,
-                        (Optional<LocalDate>) guiEvent.getData()
+                        (Optional<LocalDate>) guiEvent.getData(),
+                        false
                 );
             } else if (guiEvent.getCmd() == ServiceSelectorComponent.Commands.BUTTON_PRESSED_CANCEL) {
                 final var dialog = SwingUtilities.getWindowAncestor(serviceSelectorComponent);
@@ -1115,12 +1446,20 @@ public class GUIController implements IUpdateEventSender, IUpdateEventListener {
                 this.removeObserver(serviceSelectorComponent);
                 dialog.dispose();
                 entityManager.persist(bookedService);
+
                 this.fireUpdateEvent(new UpdateEvent(
                         this,
-                        eventToEmit,
-                        bookedService
-                ));
+                        GUIBuchung.Commands.SEND_EVENT_TO_TAB,
+                        new GUIBuchung.SendEventToTabPayload(
+                                parentComponent,
+                                new UpdateEvent(
+                                        GUIController.this,
+                                        eventToEmit,
+                                        bookedService
+                                )
 
+                        )
+                ));
             }
         });
 
